--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,15 +13,19 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.1.0
+  flutter_rating_bar: ^4.0.0
   flutter_riverpod: ^2.5.1
   go_router: ^13.2.3
   intl: ^0.19.0
-  flutter_rating_bar: ^4.0.0
+  isar: ^3.1.0+1
+  isar_flutter_libs: ^3.1.0+1
 
 dev_dependencies:
+  build_runner: ^2.4.9
   flutter_lints: ^3.0.0
   flutter_test:
     sdk: flutter
+  isar_generator: ^3.1.0+1
 
 flutter:
   uses-material-design: true
